<resources>
    <string name="app_name">FinancialManagerApp</string>
    <string name="sliderTitle">Expenses category</string>
    <string name="sliderDescription">Category make it easier to track and monitor your spending Make it easier to track and monitor your spending</string>
    <string name="add_account">Add Account</string>
    <string name="choose_a_name_for_your_account">Choose a name for your account</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="enter_your_email_and_password">Enter your email and password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_title">Login</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="select_currency">Select Currency</string>
    <string name="what_is_your_favourite_currency">What is your favourite currency?</string>
    <string name="search">Search</string>
    <string name="skip">SKIP</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="how_much_money_do_you_have_in_your_cash_wallet">How much money do you have in your cash wallet?</string>
    <string name="currency_symbol">$</string>
    <string name="amount">100,000,000,000</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="dot">.</string>
    <string name="number_0">0</string>
    <string name="number_button">number button</string>
    <string name="finish_button">finish</string>
    <string name="tap_here_to_select_currency">Tap here to select currency</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="icon_description">Icon\n</string>
    <string name="tab_icon">tab icon\n</string>
    <string name="balance">Balance: </string>
    <string name="_630_303">****</string>
    <string name="tab">tab</string>
    <string name="no_record">No record</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="find_your_account">Find your account</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="continue_">Continue</string>
    <string name="truong_nguyen">Truong Nguyen</string>
    <string name="account">Account</string>
    <string name="_200_000">$ 200,000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="save">SAVE</string>
    <string name="transaction">Transaction</string>
    <string name="date">Date</string>
    <string name="_07_18_2024">07/18/2024</string>
    <string name="_9_54_am">9:54 AM</string>
    <string name="amount_">Amount</string>
    <string name="_0">$ 0</string>
    <string name="description">Description</string>
    <string name="short_description">Short description</string>
    <string name="category">Category</string>
    <string name="select_category">Select category</string>
    <string name="wallet">Wallet</string>
    <string name="cash_519_529">Cash•$519,529</string>
    <string name="memo">Memo</string>
    <string name="add_a_note">Add a note…</string>
    <string name="enter_amount">Enter amount</string>
    <string name="c">C</string>
    <string name="divide">÷</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="equals">=</string>
    <string name="_000">000</string>
    <string name="bill">Bill</string>
    <string name="select_wallet">Select wallet</string>
    <string name="cash">Cash</string>
    <string name="from_wallet">From wallet</string>
    <string name="to_wallet">To wallet</string>
    <string name="fee">Fee</string>
    <string name="entertainment">Entertainment</string>
    <string name="_20">20</string>
    <string name="saturday">Saturday</string>
    <string name="jul_2024">Jul 2024</string>
    <string name="record">Record</string>
    <string name="food_for_cat">Food for cat</string>
    <string name="one_month_ago_i_bought_a_cat_food_bottle">One month ago I bought a cat food bottle</string>
    <string name="expense">Expense</string>
    <string name="type">Type</string>
    <string name="_07_23_2024_10_25">07/23/2024 10:25</string>
    <string name="food">Food</string>
    <string name="manager_2">Manager(2)</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="general">General</string>
    <string name="color">Color</string>
    <string name="wallet_s_name">Wallet\'s name</string>
    <string name="icon">Icon</string>
    <string name="exclude">Exclude</string>
    <string name="ignore_the_balance_of_this_wallet_on_the_total_balance">Ignore the balance of this wallet on the total balance</string>
    <string name="_3_transactions">3 transactions</string>
    <string name="transaction_list">Transaction list</string>
    <string name="view_all">View all</string>
    <string name="transfer">Transfer</string>
    <string name="overview">Overview</string>
    <string name="total_expense">Total Expense</string>
    <string name="expense_struct">Expense Struct</string>
    <string name="august_2024">August 2024</string>
    <string name="balance_">Balance</string>
    <string name="opening_balance">Opening balance</string>
    <string name="ending_balance">Ending balance</string>
    <string name="total">Total</string>
    <string name="show_more">Show more</string>
    <string name="structure">Structure</string>
    <string name="percent_0">0%</string>
    <string name="try_to_search_something">Try to search something</string>
    <string name="_1_transaction_found">1 transaction found</string>
    <string name="select_date">Select date</string>
    <string name="start">Start</string>
    <string name="_08_01_2024">08/01/2024</string>
    <string name="end">End</string>
    <string name="cancel">cancel</string>
    <string name="done">done</string>
    <string name="aug_1_aug_31">Aug 1 - Aug 31</string>
    <string name="_1_category">1 Category</string>
    <string name="budget">Budget</string>
    <string name="add_budget">Add Budget</string>
    <string name="budget_s_name">Budget\'s name</string>
    <string name="period">Period</string>
    <string name="september_spending">September spending</string>
    <string name="remain_29_998_974">Remain $29,998,974</string>
    <string name="spent">Spent</string>
    <string name="left">Left</string>
    <string name="_60">60%</string>
    <string name="food_clothing_education_entertainment_fitness_gift_health">Food, Clothing, Education, Entertainment, Fitness, Gift, Health</string>
    <string name="_08_01_08_31">08/01 - 08/31</string>
    <string name="expense_quarter_3">Expense Quarter</string>
    <string name="_21_days_left">21 days left</string>
    <string name="statistic">Statistic</string>

</resources>