<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TransactionDetailActivity">
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:elevation="10dp"
        android:minHeight="@dimen/action_bar_size"
        android:theme="?attr/actionBarTheme">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/m_10"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:padding="@dimen/m_10"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/m_20"
            android:layout_weight="1"
            android:fontFamily="@font/akaya_telivigala"
            android:gravity="center_vertical"
            android:text="@string/record"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/m_10"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:padding="@dimen/m_10"
            android:src="@drawable/ic_pencil" />
        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/m_10"
            android:background="@color/white"
            android:importantForAccessibility="no"
            android:padding="@dimen/m_10"
            android:src="@drawable/ic_trash" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_20"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingStart="@dimen/m_20"
            android:paddingTop="@dimen/m_10"
            android:paddingEnd="@dimen/m_20"
            android:paddingBottom="@dimen/m_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:background="@drawable/wallet_image"
                    android:backgroundTint="@null"
                    android:importantForAccessibility="no"
                    android:padding="10dp"
                    android:src="@drawable/ic_entertainment" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/m_10"
                    android:layout_weight="1"
                    android:text="@string/food_for_cat"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="#7E000000" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_20"
                    android:layout_weight="1"
                    android:text="@string/food" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_"
                    android:textColor="#7E000000" />

                <TextView
                    android:id="@+id/tv_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_20"
                    android:layout_weight="1"
                    android:text="@string/_200_000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#7E000000" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_20"
                    android:layout_weight="1"
                    android:text="@string/_07_23_2024_10_25" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet"
                    android:textColor="#7E000000" />

                <TextView
                    android:id="@+id/tv_wallet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_20"
                    android:layout_weight="1"
                    android:text="@string/cash" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textColor="#7E000000" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_20"
                    android:layout_weight="1"
                    android:text="@string/expense" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_memo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/memo"
                    android:textColor="#7E000000" />

                <TextView
                    android:id="@+id/tv_memo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_20"
                    android:layout_weight="1"
                    android:text="@string/one_month_ago_i_bought_a_cat_food_bottle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_fee_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m_10"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fee"
                    android:textColor="#7E000000" />

                <TextView
                    android:id="@+id/tv_fee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m_20"
                    android:layout_weight="1"
                    android:text="@string/_200_000"
                    android:textColor="@color/color_6" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>