<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragment.transaction.Income">

    <!-- TODO: Update blank fragment layout -->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="@dimen/m_20"
       android:background="@color/white"
       >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/date"
           android:textStyle="bold"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/m_10"
           >
           <TextView
               android:id="@+id/tv_date"
               android:layout_weight="1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_07_18_2024"
               android:textSize="@dimen/number_size"
               />
           <TextView
               android:id="@+id/tv_time"
               android:layout_weight="1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/_9_54_am"
               android:textSize="@dimen/number_size"
               />
       </LinearLayout>
       <View
           android:layout_marginTop="@dimen/m_10"
           android:layout_marginBottom="@dimen/m_10"
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:background="@color/gray"
           />
       <TextView
           android:layout_marginTop="@dimen/m_10"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/amount_"
           android:textStyle="bold"
           />
       <LinearLayout
           android:id="@+id/tv_amount_container"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/m_10"
           tools:ignore="UseCompoundDrawables">
           <TextView
               android:id="@+id/tv_amount"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/_0"
               android:fontFamily="@font/roboto_mono"
               android:textSize="@dimen/number_size"
               />
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:src="@drawable/ic_caret_down"
               android:background="@color/white"
               android:paddingStart="20dp"
               android:paddingEnd="20dp"
               android:importantForAccessibility="no" />
       </LinearLayout>
       <View
           android:layout_marginTop="@dimen/m_10"
           android:layout_marginBottom="@dimen/m_10"
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:background="@color/gray"
           />
       <TextView
           android:layout_marginTop="@dimen/m_10"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/description"
           android:textStyle="bold"
           />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/m_10"
           >
           <EditText
               android:id="@+id/edt_description"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:minHeight="48dp"
               android:background="@null"
               android:hint="@string/short_description"
               android:textSize="@dimen/description_text_size"
               tools:ignore="Autofill,TextFields" />
       </LinearLayout>
       <View
           android:layout_marginTop="@dimen/m_10"
           android:layout_marginBottom="@dimen/m_10"
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:background="@color/gray"
           />
       <TextView
           android:layout_marginTop="@dimen/m_10"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/category"
           android:textStyle="bold"
           />
       <LinearLayout
           android:id="@+id/tv_category_container"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/m_10"
           tools:ignore="UseCompoundDrawables">
           <TextView
               android:id="@+id/tv_category"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/select_category"
               android:textColor="@color/gray"
               android:textSize="@dimen/description_text_size"
               />
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:src="@drawable/ic_caret_down"
               android:background="@color/white"
               android:paddingStart="20dp"
               android:paddingEnd="20dp"
               android:importantForAccessibility="no" />
       </LinearLayout>
       <View
           android:layout_marginTop="@dimen/m_10"
           android:layout_marginBottom="@dimen/m_10"
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:background="@color/gray"
           />
       <TextView
           android:layout_marginTop="@dimen/m_10"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/wallet"
           android:textStyle="bold"
           />
       <LinearLayout
           android:id="@+id/tv_wallet_container"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/m_10"
           tools:ignore="UseCompoundDrawables">
           <TextView
               android:id="@+id/tv_wallet"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/cash_519_529"
               android:textSize="@dimen/description_text_size"
               android:fontFamily="@font/roboto_mono"
               />
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:src="@drawable/ic_caret_down"
               android:background="@color/white"
               android:paddingStart="20dp"
               android:paddingEnd="20dp"
               android:importantForAccessibility="no" />
       </LinearLayout>
       <View
           android:layout_marginTop="@dimen/m_10"
           android:layout_marginBottom="@dimen/m_10"
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:background="@color/gray"
           />
       <TextView
           android:layout_marginTop="@dimen/m_10"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/memo"
           android:textStyle="bold"
           />
       <LinearLayout

           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/m_10"
           >
           <EditText
               android:id="@+id/edt_memo"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:minHeight="48dp"
               android:background="@null"
               android:hint="@string/add_a_note"
               android:textSize="@dimen/description_text_size"
               tools:ignore="Autofill,TextFields" />
       </LinearLayout>
       <View
           android:layout_marginTop="@dimen/m_10"
           android:layout_marginBottom="@dimen/m_10"
           android:layout_width="wrap_content"
           android:layout_height="1dp"
           android:background="@color/gray"
           />
   </LinearLayout>

</ScrollView>