<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/m_10"
    android:paddingBottom="@dimen/m_10"
    android:paddingStart="@dimen/m_20"
    android:paddingEnd="@dimen/m_20"
    >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_entertainment"
        android:importantForAccessibility="no"
        android:padding="10dp"
        android:background="@drawable/wallet_image"
        android:backgroundTint="@null"
        />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/m_10"
        >

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_wallet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:textColor="#80232323"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/_200_000"
            android:textColor="@color/primary" />
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9_54_am"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</LinearLayout>