<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="@dimen/m_20"
        android:paddingEnd="@dimen/m_20"
        >
        <TextView
            android:id="@+id/tv_day_of_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            android:textStyle="bold"
            android:textSize="36sp"
            />
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            >

            <TextView
                android:id="@+id/tv_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />
            <TextView
                android:id="@+id/tv_month_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jul_2024"
                android:textColor="#80202020"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_200_000"
            android:fontFamily="@font/roboto_mono"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/gray"
        />
    <com.example.financialmanagerapp.custom.ExpandedListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:layout_marginBottom="@dimen/m_20"
        android:listSelector="@drawable/list_selector"
        />
</LinearLayout>